# TDD-FastAPI

./: .gitignore  README.MD
tdd_fastapi/: .gitignore  Makefile  docker-compose.yml  pyproject.toml  pyvenv.cfg  requirements.txt
tdd_fastapi/store/: main.py
